syntax = "proto3";
import "google/protobuf/empty.proto";

package com.goodfood.notification;

enum MessageType {
  USER_CLAIM = 0;
  USER_PUSH = 1;
  USER_EMAIL = 2;

  RESTAURANT_PUSH = 3;
  RESTAURANT_EMAIL = 4;
}

message Notification {
  string id = 1;
  
  string title = 2;
  string description = 3;
  string icon = 4;
  optional string image = 5;
  optional string callback_url = 6;
  MessageType type = 7;
  
  optional string user_id = 8;
  optional string restaurant_id = 9;

  string created_at = 10;
  string updated_at = 11;
  optional string read_at = 12;
}



service NotificationService {
  rpc CreateNotification (CreateNotificationRequest) returns (Notification) {}
  rpc GetNotification (NotificationIdRequest) returns (Notification) {}
  rpc GetNotificationsByUserId (GetNotificationsByUserIdRequest) returns (NotificationList) {}
  rpc GetNotificationsByRestaurantId (GetNotificationsByRestaurantIdRequest) returns (NotificationList) {}

  rpc ReadNotification (NotificationIdRequest) returns (Notification) {}
  rpc UpdateNotification (UpdateNotificationRequest) returns (Notification) {}
  rpc DeleteNotification (NotificationIdRequest) returns (google.protobuf.Empty) {}
}

message CreateNotificationRequest {
  string title = 1;
  string description = 2;
  string icon = 3;
  optional string image = 4;
  optional string callback_url = 5;
  MessageType type = 6;
  
  optional string user_id = 7;
  optional string restaurant_id = 8;
}

message NotificationIdRequest {
  string id = 1;
}

message GetNotificationsByUserIdRequest {
  string user_id = 1;
}

message GetNotificationsByRestaurantIdRequest {
  string restaurant_id = 1;
}

message UpdateNotificationRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string icon = 4;
  optional string image = 5;
  optional string callback_url = 6;
}

message NotificationList {
  repeated Notification notifications = 1;
}